--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
 </head>
 <body>
     <div class="card">
-        <div class="circle" style="--clr:#f40103">
-            <img src="cocacola_logo_PNG15.png" class="logo" alt="">
+        <div class="circle" style="--clr:#DA70D6">
+            <img src="anime_girl_PNG28.png" class="logo" alt="">
         </div>
         <div class="content">
-            <h2>CocaCola</h2>
-            <p>Coca-Cola Dance Vending Machine thách thức mọi người mô phỏng lại 
-                các bước nhảy của nhóm nhạc Hàn Quốc 2PM để được một lon Coke miễn phí.
-                Các cảm biến và webcam tích hợp sẵn </p>
-            <a href="#">Discovery</a>
+            <h2>Bé Kem</h2>
+            <p>_Học Quản Trị Nhân Lực tại Trường ĐH Nội Vụ Phân Hiệu Quảng Nam<br>
+               _Tính Cách Hay Hờn,Tham Ăn, Ngủ Nướng, Làm Biếng<br>
+               _Sad Girl về đêm<br>
+               _Trắc Trở Trong Tình Yêu</p>
+            <a href="https://www.facebook.com/tai.nguyenthithanh.94">Khám Phá</a>
         </div>
-        <img src="cocacola_PNG4.png" class="product_img" alt="">
+        <img src="257999699_870543436986368_1978076187220327828_n-removebg-preview.png" class="product_img" alt="">
     </div>
     <div class="card">
         <div class="circle" style="--clr:#02953a">
-            <img src="sprite_PNG98769.png" class="logo" alt="">
+            <img src="—Pngtree—cartoon hand-painted cartoon little boy_7068424.png" class="logo" alt="">
         </div>
         <div class="content">
-            <h2>CocaCola</h2>
-            <p>Coca-Cola Dance Vending Machine thách thức mọi người mô phỏng lại các bước nhảy của nhóm nhạc Hàn Quốc 2PM để được một lon Coke miễn phí. Các cảm biến và webcam tích hợp sẵn sẽ có thể nhận dạng sự tương tác của con người.</p>
-            <a href="#">Discovery</a>
+            <h2>Quí Xun</h2>
+            <p> _Học Công Nghệ Thông Tin Tại Trường ĐH CNTT & TT Việt Hàn<br>
+                _Tính Cách Khờ Khạo, Ngu Nữ, Ham Ăn, Tham Ngủ<br>
+                _Trap Boy 1 thời<br>
+                _Tình Duyên Lận Đận
+            </p>
+            <a href="https://www.facebook.com/phanquixuan.8203">Khám Phá</a>
         </div>
-        <img src="sprite_PNG98774.png" class="product_img" alt="">
+        <img src="285885717_561518828841195_8130855872504257947_n-removebg-preview.png" class="product_img" alt="">
     </div>
-</body>
 </html>
